<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.saleh.mat3mak.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/images"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PricesBu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:onClick="Prices"
                android:padding="0dp"
                android:text="@string/menu"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/OrderBu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background2"
                android:gravity="center"
                android:onClick="Order"
                android:padding="0dp"
                android:text="@string/Order"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/GallaryBu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background4"
                android:fadingEdge="horizontal|vertical"
                android:fadingEdgeLength="15dp"
                android:gravity="center"
                android:onClick="Gallary"
                android:padding="0dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/knowUs"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/OffersBu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background4"
                android:fadingEdge="horizontal|vertical"

                android:fadingEdgeLength="15dp"
                android:gravity="center"
                android:onClick="Offers"
                android:padding="0dp"
                android:text="@string/Offers"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monasbatBu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background30"
                android:gravity="center"
                android:onClick="monasbatBu"
                android:padding="0dp"
                android:text="@string/Monasabat"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/MyOrders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background3"
                android:gravity="center"
                android:onClick="myOrdersBu"
                android:padding="0dp"
                android:text="my Orders"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>
